[package]
name = "solmarket"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmarket"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.32.1",features = ["init-if-needed"] }
anchor-spl = "0.32.0"


[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.9.2"
litesvm = "0.8.1"
solana-account = "3.2.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.1"
solana-system-program = "3.0.10"
solana-program = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
solana-kite = "0.2.1"

